--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,35 @@
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+{#<h2>Login</h2>#}
+{#<form method="post">#}
+{#  {% csrf_token %}#}
+{#  {{ form.as_p }}#}
+{#  <button type="submit">Login</button>#}
+{#</form>#}
+
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block head-extra %}
+    <link rel="stylesheet" href="/static/css/login_custom.css">
+{% endblock head-extra %}
+{% block content %}
+    <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6">
+            <h1 class="display-3">Welcome to Engine4 IoT</h1>
+            <div class="info-form">
+                <form action="" class="form justify-content-center" action="?next={{ redirect_to }}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label class="sr-only" for="form-username">Username</label>
+                        <input type="text" name="username" placeholder="Username..." class="form-username form-control" id="form-username">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="form-password">Password</label>
+                        <input type="password" name="password" placeholder="Password..." class="form-password form-control" id="form-password">
+                    </div>
+                    <button type="submit" class="btn btn-success">Sign in!</button><a class="btn btn-primary" href="{% url 'signup' %}">Signup!</a>
+                </form>
+            </div>
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
+{% endblock %}
