--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                {% include 'viewer/top.html' %}
+                {% include 'top.html' %}
             </div>
         </div>
         <div class="row">
@@ -44,7 +44,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-1">{%  include 'sidebar.html' %}</div>
+            <div class="col-11">
                 {% block content %}{% endblock content %}
             </div>
         </div>
